[gd_scene load_steps=17 format=3 uid="uid://dvl3kywk6lxte"]

[ext_resource type="Texture2D" uid="uid://dy1h7ycrfjcgq" path="res://Assets/environment/Epic_BlueSunset_EquiRect_flat.png" id="1_4tefe"]
[ext_resource type="Script" uid="uid://b4xampnfeflny" path="res://Battlefields/tutorial.gd" id="1_isuhv"]
[ext_resource type="PackedScene" uid="uid://b7kmqfstuuhfl" path="res://Scenes/battle_new.tscn" id="2_isuhv"]
[ext_resource type="Script" uid="uid://b6ajhkvrcnc01" path="res://Battlefields/battle_info_step.gd" id="4_d6atl"]
[ext_resource type="AudioStream" uid="uid://cyhau27c5qqjv" path="res://Audio/sample1.wav" id="4_mxvau"]
[ext_resource type="Texture2D" uid="uid://bqfpsg5xoaypo" path="res://Assets/UI/Memos/MemoRect4.png" id="5_fekit"]
[ext_resource type="Texture2D" uid="uid://c3mpuhip4jqr3" path="res://Assets/UI/Memos/MemoRect.png" id="6_rdyq2"]
[ext_resource type="Texture2D" uid="uid://de0rhs2er4jdq" path="res://Assets/UI/Memos/MemoRect2.png" id="7_72xn0"]
[ext_resource type="Texture2D" uid="uid://b5m0ehmch6b5b" path="res://Assets/UI/arrows/arrow1.png" id="8_0as0j"]
[ext_resource type="Texture2D" uid="uid://cm2ec3xtx3loq" path="res://Assets/UI/Memos/MemoRect3.png" id="9_mireq"]
[ext_resource type="Texture2D" uid="uid://u76cqes7y78n" path="res://Assets/UI/arrows/arrow5.png" id="10_72xn0"]
[ext_resource type="Texture2D" uid="uid://cnh7hut33kmlh" path="res://Assets/UI/Memos/MemoRect5.png" id="11_0as0j"]
[ext_resource type="Texture2D" uid="uid://bxdmhouo8n57t" path="res://Assets/UI/arrows/arrow4.png" id="12_mireq"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_mxvau"]
panorama = ExtResource("1_4tefe")

[sub_resource type="Sky" id="Sky_sjmby"]
sky_material = SubResource("PanoramaSkyMaterial_mxvau")

[sub_resource type="Environment" id="Environment_ftct7"]
background_mode = 2
background_color = Color(0.788765, 0.999632, 1, 1)
sky = SubResource("Sky_sjmby")
ambient_light_source = 3
ambient_light_color = Color(1, 1, 1, 1)
volumetric_fog_enabled = true
volumetric_fog_density = 2.0
volumetric_fog_length = 85.56

[node name="Tutorial" type="Node3D" groups=["tutorial"]]
script = ExtResource("1_isuhv")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.233535, 0)
size = Vector3(20, 0.5, 20)

[node name="CSGBox3D2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.136, 1.44226, -0.0856876)
size = Vector3(0.5, 15, 25)

[node name="CSGBox3D3" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.1552, 1.44226, -0.0856876)
size = Vector3(0.5, 15, 25)

[node name="CSGBox3D4" type="CSGBox3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.112119, 1.44226, -10.2791)
size = Vector3(0.5, 15, 25)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ftct7")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.960177, 0.279393, 0, -0.279393, 0.960177, 0, 2.03744, 2.90872)

[node name="BattleNew" parent="." instance=ExtResource("2_isuhv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.28108, -0.241742)

[node name="Tutorial" type="CanvasLayer" parent="."]

[node name="PartyInfo" type="Control" parent="Tutorial"]
visible = false
z_index = 1
z_as_relative = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="1" type="Control" parent="Tutorial/PartyInfo"]
layout_mode = 3
anchors_preset = 0
offset_left = 586.0
offset_top = 399.0
offset_right = 626.0
offset_bottom = 439.0

[node name="MemoRect" type="Sprite2D" parent="Tutorial/PartyInfo/1"]
position = Vector2(0, 17.125)
scale = Vector2(1, 0.833861)
texture = ExtResource("5_fekit")

[node name="Arrow1" type="Sprite2D" parent="Tutorial/PartyInfo/1"]
position = Vector2(-127, -62)
texture = ExtResource("8_0as0j")

[node name="Label" type="Label" parent="Tutorial/PartyInfo/1"]
layout_mode = 0
offset_left = -117.0
offset_top = -37.0
offset_right = 114.0
offset_bottom = 76.0
text = "Click on an artling to swap
them in!
These bars show their
current hp and exp"
horizontal_alignment = 1

[node name="BattleInfoStep" type="Control" parent="Tutorial"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_d6atl")

[node name="1" type="Control" parent="Tutorial/BattleInfoStep"]
layout_mode = 3
anchors_preset = 0
offset_left = 579.0
offset_top = 93.0
offset_right = 619.0
offset_bottom = 133.0

[node name="MemoRect" type="Sprite2D" parent="Tutorial/BattleInfoStep/1"]
position = Vector2(0, 30.25)
texture = ExtResource("5_fekit")

[node name="Label" type="Label" parent="Tutorial/BattleInfoStep/1"]
layout_mode = 0
offset_left = -116.0
offset_top = -33.0
offset_right = 115.0
offset_bottom = 94.0
text = "Welcome to the tutorial!
Press the arrow keys to
go forward or back
Press T to hide the tutorial
or K to completely skip"
horizontal_alignment = 1

[node name="2" type="Control" parent="Tutorial/BattleInfoStep"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 579.0
offset_top = 86.0
offset_right = 619.0
offset_bottom = 126.0

[node name="MemoRect" type="Sprite2D" parent="Tutorial/BattleInfoStep/2"]
position = Vector2(0.499987, 15.875)
scale = Vector2(1.18905, 1.40493)
texture = ExtResource("6_rdyq2")

[node name="Label" type="Label" parent="Tutorial/BattleInfoStep/2"]
layout_mode = 0
offset_left = -106.0
offset_top = -24.0
offset_right = 106.0
offset_bottom = 25.0
text = "Press ESC or click
the cog button to bring up
the options menu"
horizontal_alignment = 1

[node name="3" type="Control" parent="Tutorial/BattleInfoStep"]
visible = false
anchors_preset = 0
offset_left = 158.0
offset_top = 156.0
offset_right = 198.0
offset_bottom = 196.0

[node name="MemoRect" type="Sprite2D" parent="Tutorial/BattleInfoStep/3"]
position = Vector2(15.875, 12.25)
scale = Vector2(1.32463, 1.34507)
texture = ExtResource("7_72xn0")

[node name="Arrow1" type="Sprite2D" parent="Tutorial/BattleInfoStep/3"]
position = Vector2(-122, -51)
texture = ExtResource("8_0as0j")

[node name="Label" type="Label" parent="Tutorial/BattleInfoStep/3"]
layout_mode = 0
offset_left = -106.0
offset_top = -24.0
offset_right = 106.0
offset_bottom = 25.0
text = "This is your artling's health!
If it is reduced to 0, your artling
will no longer be able to fight."

[node name="4" type="Control" parent="Tutorial/BattleInfoStep"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 971.0
offset_top = 157.0
offset_right = 1011.0
offset_bottom = 197.0

[node name="MemoRect" type="Sprite2D" parent="Tutorial/BattleInfoStep/4"]
position = Vector2(-0.500029, 12.25)
scale = Vector2(1.43781, 1.34507)
texture = ExtResource("9_mireq")

[node name="Arrow1" type="Sprite2D" parent="Tutorial/BattleInfoStep/4"]
position = Vector2(130, -51)
texture = ExtResource("8_0as0j")
flip_h = true

[node name="Label" type="Label" parent="Tutorial/BattleInfoStep/4"]
layout_mode = 0
offset_left = -133.0
offset_top = -24.0
offset_right = 134.0
offset_bottom = 25.0
text = "This is the enemy artlings's health.
Reduce all the enemy's health to 0
in order to win the battle."
horizontal_alignment = 2

[node name="5" type="Control" parent="Tutorial/BattleInfoStep"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 283.0
offset_top = 364.0
offset_right = 323.0
offset_bottom = 404.0

[node name="MemoRect" type="Sprite2D" parent="Tutorial/BattleInfoStep/5"]
position = Vector2(5, 32.25)
scale = Vector2(1.21967, 0.610759)
texture = ExtResource("5_fekit")

[node name="Arrow2" type="Sprite2D" parent="Tutorial/BattleInfoStep/5"]
position = Vector2(110, 97)
rotation = 0.194478
scale = Vector2(1.1, 1.1)
texture = ExtResource("10_72xn0")

[node name="Label" type="Label" parent="Tutorial/BattleInfoStep/5"]
layout_mode = 0
offset_left = -133.0
offset_top = -8.0
offset_right = 141.0
offset_bottom = 77.0
text = "These are your moves!
Hover over them for a description.
Click to choose a move and attack"
horizontal_alignment = 2

[node name="6" type="Control" parent="Tutorial/BattleInfoStep"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 602.0
offset_top = 348.0
offset_right = 642.0
offset_bottom = 388.0

[node name="MemoRect" type="Sprite2D" parent="Tutorial/BattleInfoStep/6"]
position = Vector2(17.125, 23.625)
scale = Vector2(1.41169, 1.42606)
texture = ExtResource("6_rdyq2")

[node name="Arrow4" type="Sprite2D" parent="Tutorial/BattleInfoStep/6"]
position = Vector2(-128, 89)
texture = ExtResource("10_72xn0")
flip_h = true

[node name="Label" type="Label" parent="Tutorial/BattleInfoStep/6"]
layout_mode = 0
offset_left = -113.0
offset_top = -17.0
offset_right = 148.0
offset_bottom = 62.0
text = "This is the description box.
Click to progress the turn after
choosing a move."

[node name="7" type="Control" parent="Tutorial/BattleInfoStep"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 1036.0
offset_top = 334.0
offset_right = 1076.0
offset_bottom = 374.0

[node name="MemoRect" type="Sprite2D" parent="Tutorial/BattleInfoStep/7"]
position = Vector2(-19.375, 23.625)
scale = Vector2(1.04851, 1.42606)
texture = ExtResource("7_72xn0")

[node name="Arrow4" type="Sprite2D" parent="Tutorial/BattleInfoStep/7"]
position = Vector2(70, 89)
texture = ExtResource("10_72xn0")

[node name="Label" type="Label" parent="Tutorial/BattleInfoStep/7"]
layout_mode = 0
offset_left = -113.0
offset_top = -17.0
offset_right = 87.0
offset_bottom = 62.0
text = "Click this button
to make the description
automatically play!"

[node name="8" type="Control" parent="Tutorial/BattleInfoStep"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 176.0
offset_top = 317.0
offset_right = 216.0
offset_bottom = 357.0

[node name="MemoRect" type="Sprite2D" parent="Tutorial/BattleInfoStep/8"]
position = Vector2(41.625, 9.25)
scale = Vector2(1.52615, 0.629747)
texture = ExtResource("11_0as0j")

[node name="Arrow2" type="Sprite2D" parent="Tutorial/BattleInfoStep/8"]
position = Vector2(-123, 76)
scale = Vector2(1.1, 1.1)
texture = ExtResource("12_mireq")
flip_h = true

[node name="Label" type="Label" parent="Tutorial/BattleInfoStep/8"]
layout_mode = 0
offset_left = -131.0
offset_top = -30.0
offset_right = 214.0
offset_bottom = 52.0
text = "This is the party button. 
Click it to view your party and swap artlings! 
Be careful as swapping will take up a turn."

[node name="9" type="Control" parent="Tutorial/BattleInfoStep"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 579.0
offset_top = 93.0
offset_right = 619.0
offset_bottom = 133.0

[node name="MemoRect" type="Sprite2D" parent="Tutorial/BattleInfoStep/9"]
position = Vector2(0, 30.25)
texture = ExtResource("11_0as0j")

[node name="Label" type="Label" parent="Tutorial/BattleInfoStep/9"]
layout_mode = 0
offset_left = -116.0
offset_top = -33.0
offset_right = 115.0
offset_bottom = 94.0
text = "If you win, your artlings get
experience to level up.
You'll always get inspiration
to make new artlings
whether you win or lose."
horizontal_alignment = 1

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 6.22952, 0)
light_energy = 5.0
spot_range = 10.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866075, -0.107449, 0.488231, -0.144097, 0.881522, 0.449618, -0.478697, -0.459755, 0.74798, 0, 11.3656, 0)

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_mxvau")
autoplay = true
bus = &"music"
playback_type = 1

[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
